--- a/src/public/css/components/form.css
+++ b/src/public/css/components/form.css
@@ -10,6 +10,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 50px;
+    width: 50%;
 }
 
 .form__title {
@@ -21,9 +22,9 @@
 
 .form__card {
     width: 100%;
-    max-width: 500px;
+    max-width: 600px;
     background: #fff;
-    padding: 25px 30px;
+    padding: 25px 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -73,10 +74,4 @@
     font-weight: bold;
     font-size: 15px;
     cursor: pointer;
-}
-
-@media screen and (min-width: 1400px) {
-    .form__card {
-        max-width: 600px;
-    }
 }
