--- a/src/public/css/items/index.css
+++ b/src/public/css/items/index.css
@@ -1,11 +1,11 @@
 .items-container {
     width: 100%;
-    max-width: 1600px;
+    max-width: 1540px;
     margin: 20px auto;
-    padding: 0;
+    padding: 0 30px;
+    box-sizing: border-box;
 }
 
-/* --- タブ --- */
 .items-tabs {
     display: flex;
     gap: 40px;
@@ -33,17 +33,15 @@
     color: red;
 }
 
-/* --- 商品カード --- */
 .items-list {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
-    margin: 20px;
     min-height: 200px;
 }
 
 .item-card {
-    flex: 0 0 calc(25% - 30px);
+    flex: 0 0 calc((100% - 90px) / 4);
     min-width: 240px;
     text-decoration: none;
     color: #000;
@@ -82,7 +80,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.656); /* 半透明の黒背景 */
+    background: rgba(0, 0, 0, 0.656);
     color: #fff;
     padding: 14px 28px;
     font-size: 40px;
@@ -90,25 +88,6 @@
     border-radius: 8px;
     z-index: 10;
     letter-spacing: 2px;
-}
-
-@media screen and (min-width: 1400px) and (max-width: 1540px) {
-    .items-container {
-        max-width: 1540px;
-        padding: 0 30px;
-    }
-
-    .items-list {
-        gap: 24px;
-    }
-
-    .item-card {
-        width: calc(25% - 24px);
-    }
-
-    .items-tab {
-        font-size: 17px;
-    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 850px) {
@@ -138,7 +117,6 @@
         gap: 20px;
     }
 
-    /* 文字少し小さめ */
     .item-card__name {
         font-size: 15px;
     }
