--- a/src/public/css/auth/verify-guide.css
+++ b/src/public/css/auth/verify-guide.css
@@ -12,6 +12,12 @@
     margin-bottom: 40px;
 }
 
+.verify-guide__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .verify-guide__button {
     width: 240px;
     height: 48px;
